<resources>
    <string name="app_name">扬宏豕慧</string>
    <string name="welcome_name">欢迎界面图片</string>
    <string name="home_one_list_iv_des">首页新闻列表图片描述</string>
    <string name="home_two_move_iv_des">首页电影图片</string>
    <string name="home_music_new">最新歌曲</string>
    <string name="home_music_hot">最热歌曲</string>
    <string name="home_music_kg">酷狗歌曲</string>
    <string name="about_me"> 关于本APP\n作者：扬宏豕慧\n联系QQ：2703401268\n个人小站：http://www.iyhsh.icoc.in/</string>
    <string name="open_blog">打开我的博客</string>
    <string name="look_my_blog">查看我的博客</string>
</resources>
