<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/home_music_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_button_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home_music_rb_qq_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="最新排行" />

        <RadioButton
            android:id="@+id/home_music_rb_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/home_music_new" />

        <RadioButton
            android:id="@+id/home_music_rb_hot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/home_music_hot" />

        <RadioButton
            android:id="@+id/home_music_rb_kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/home_button_bg"
            android:button="@null"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/home_music_kg" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/home_music_ll_replace"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--<android.support.v4.view.ViewPager
        android:id="@+id/home_music_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />-->
</LinearLayout>